--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
       white-space:nowrap;
     }
 
-    /* 장바구니 버튼 */
+    /* 담아둔 목록 버튼 */
     .cartBtn{
       width:100%;
       height:56px;
@@ -1082,7 +1082,7 @@
 
             <div class="buildingSec">
               <button class="cartBtn" id="cartBtn">
-                <span>장바구니</span>
+                <span>담아둔 목록</span>
                 <span class="cartCountPill" id="cartCount">0</span>
               </button>
             </div>
@@ -1143,7 +1143,7 @@
             <div class="v" id="dop">-</div>
             <div class="links" id="dlinks"></div>
             <div class="dActions">
-              <button class="dAddCart" id="dAddCart">장바구니 담기</button>
+              <button class="dAddCart" id="dAddCart">담아둔 목록 담기</button>
             </div>
           </div>
         </div>
@@ -1155,7 +1155,7 @@
   <div class="modalOverlay" id="cartModalOverlay">
     <div class="modal">
       <div class="modalHead">
-        <div class="t">장바구니</div>
+        <div class="t">담아둔 목록</div>
         <button class="x" id="cartClose">✕</button>
       </div>
       <div class="modalBody" id="cartModalBody"></div>
